<resources>
    <string name="app_name">chapter-07-intent-part-03-intent-with-data-parcelable</string>
    <string name="chapter07">Chapter 07: Intent with Data Parcelable</string>
    <string name="main_page">This is Main Page</string>
    <string name="button_introduction">Click Here to go Page Two</string>
    <string name="button_to_page_two">Go to Page Two</string>
    <string name="page_two">You are in Page Two</string>
    <string name="back_to_main">Click Here to Back Main Page</string>
    <string name="back">Back</string>
    <string name="your_data_parcelable">Your Data Parcelable</string>
</resources>